cmake_minimum_required(VERSION 3.15)
project(Assignment_2_19369726 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment_2_19369726 main.c print_board.c print_board.h player_initialization.c player_initialization.h player_movement.c player_movement.h create_board.c create_board.h move_stack.c move_stack.h)